manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: pickup-management
  name: pickup-management
spec:
  finalizers:
  - kubernetes
