manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: edge-retail-consumer
  name: edge-retail-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-retail-consumer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: edge-retail-consumer
    spec:
      containers:
      - command:
        - /edge-retail-consumer
        args:
        - -config
        - /consumer-cfg/config.yaml
        - -port
        - "8080"
        image: edge-retail-consumer
        imagePullPolicy: Always
        name: edge-retail-consumer
        volumeMounts:
          - mountPath: /consumer-cfg
            name: kafka-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      volumes:
      - configMap:
          defaultMode: 0640
          name: kafka-configmap
        name: kafka-config
