manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: edge-retail-consumer
  name: edge-retail-consumer
  namespace: pickup-management
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: edge-retail-consumer
  sessionAffinity: None
  type: ClusterIP
